@@ -18,6 +18,8 @@
 package apm // import "go.elastic.co/apm"
 
 import (
+	"time"
+
 	"go.elastic.co/apm/internal/ringbuffer"
 	"go.elastic.co/apm/model"
 	"go.elastic.co/apm/stacktrace"
@@ -122,6 +124,10 @@ func (w *modelWriter) buildModelTransaction(out *model.Transaction, tx *Transact
 	out.Duration = td.Duration.Seconds() * 1000
 	out.SpanCount.Started = td.spansCreated
 	out.SpanCount.Dropped = td.spansDropped
+	if dss := buildDroppedSpansStats(td.droppedSpansStats); len(dss) > 0 {
+		out.DroppedSpansStats = dss
+	}
+
 	if sampled {
 		out.Context = td.Context.build()
 	}
@@ -272,4 +278,23 @@ func normalizeOutcome(outcome string) string {
 	default:
 		return "unknown"
 	}
+}
+
+func buildDroppedSpansStats(dss droppedSpanTimingsMap) []model.DroppedSpansStats {
+	out := make([]model.DroppedSpansStats, 0, len(dss))
+	for k, timing := range dss {
+		out = append(out, model.DroppedSpansStats{
+			DestinationServiceResource: k.destination,
+			Outcome:                    k.outcome,
+			Duration: model.AggregateDuration{
+				Count: int(timing.count),
+				Sum: model.DurationSum{
+					// The internal representation of spanTimingsMap is in time.Nanosecond
+					// unit which we need to convert to us.
+					Us: timing.duration / int64(time.Microsecond),
+				},
+			},
+		})
+	}
+	return out
 }
