@@ -108,10 +108,13 @@ func (tx *Transaction) StartSpanOptions(name, spanType string, opts SpanOptions)
 	// Guard access to spansCreated, spansDropped, rand, and childrenTimer.
 	tx.TransactionData.mu.Lock()
 	defer tx.TransactionData.mu.Unlock()
-	if !span.traceContext.Options.Recorded() {
-		span.tracer = nil // span is dropped
-	} else if tx.maxSpans >= 0 && tx.spansCreated >= tx.maxSpans {
-		span.tracer = nil // span is dropped
+
+	notRecorded := !span.traceContext.Options.Recorded()
+	exceedsMaxSpans := tx.maxSpans >= 0 && tx.spansCreated >= tx.maxSpans
+	// Drop span when it is not recorded.
+	if span.dropWhen(notRecorded) {
+		// nothing to do here since it isn't recorded.
+	} else if span.dropWhen(exceedsMaxSpans) {
 		tx.spansDropped++
 	} else {
 		if opts.SpanID.Validate() == nil {
@@ -299,6 +302,21 @@ func (s *Span) dropped() bool {
 	return s.tracer == nil
 }
 
+// dropWhen unsets the tracer when the passed bool cond is `true` and returns
+// `true` only when the span is dropped. If the span has already been dropped
+// or the condition isn't `true`, it then returns `false`.
+//
+// Must be called with s.mu.Lock held to be able to write to s.tracer.
+func (s *Span) dropWhen(cond bool) bool {
+	if s.Dropped() {
+		return false
+	}
+	if cond {
+		s.tracer = nil
+	}
+	return cond
+}
+
 // End marks the s as being complete; s must not be used after this.
 //
 // If s.Duration has not been set, End will set it to the elapsed time
@@ -321,11 +339,12 @@ func (s *Span) End() {
 		s.Outcome = s.Context.outcome()
 	}
 	if s.dropped() {
-		if s.tx == nil {
-			droppedSpanDataPool.Put(s.SpanData)
-		} else {
+		if s.tx != nil {
 			s.reportSelfTime()
+			s.aggregateDroppedSpanStats()
 			s.reset(s.tx.tracer)
+		} else {
+			droppedSpanDataPool.Put(s.SpanData)
 		}
 		s.SpanData = nil
 		return
@@ -417,6 +436,21 @@ func (s *Span) IsExitSpan() bool {
 		return false
 	}
 	return s.exit
+}
+
+// aggregateDroppedSpanStats aggregates the current span into the transaction
+// dropped spans stats timings.
+//
+// Must only be called from End() with s.tx.mu held.
+func (s *Span) aggregateDroppedSpanStats() {
+	// An exit span would have the destination service set but in any case, we
+	// check the field value before adding an entry to the dropped spans stats.
+	service := s.Context.destinationService.Resource
+	if s.dropped() && s.IsExitSpan() && service != "" {
+		s.tx.TransactionData.mu.Lock()
+		s.tx.droppedSpansStats.add(service, s.Outcome, s.Duration)
+		s.tx.TransactionData.mu.Unlock()
+	}
 }
 
 // SpanData holds the details for a span, and is embedded inside Span.
